<resources>
    <string name="app_name">GraficasAndroidPlot</string>

    <string name="textView_titulo">Graficas AndroidPlot</string>
    <string name="textView_descripcion">Generadas con la librería JPlot
 para Android, tomado de: \n
 https://github.com/johnspice/jplot-android
 </string>
    <string name="button_grafica_puntos">Grafica puntos</string>
    <string name="button_grafica_pastel">Grafica pastel</string>
    <string name="button_grafica_barras">Grafica barras</string>
    <string name="button_grafica_personalizada">Grafica personalizada</string>

    <!-- Grafica puntos -->
    <string name="textView_titulo_puntos">Gráfica puntos</string>
    <string name="button_regresar_puntos">Regresar</string>

    <!-- Grafica barras -->
    <string name="textView_titulo_barras">Gráfica barras</string>
    <string name="button_regresar_barras">Regresar</string>


    <!-- Grafica pastel -->
    <string name="textView_titulo_pastel">Gráfica pastel</string>
    <string name="button_regresar_pastel">Regresar</string>

    <!-- Grafica personalizada -->
    <string name="textView_titulo_personalizada">Barras personalizada</string>
    <string name="textView_etiquetas_x">Etiquetas del Eje X (espacio)</string>
    <string name="textView_valores_y">Números del Eje Y</string>
    <string name="textView_valores_x">Números del Eje X</string>
    <string name="button_crear_grafica">Crear gráfica</string>"
    <string name="button_regresar_personalizada">Regresar</string>
    <string name="button_Aceptar">Gráficar</string>


    <!-- Puntos Perznaluizada -->
    <string name="tvTituloPuntosP">Grafica de puntos Perzonalizada</string>
    <string name="tvX">Numeros del Eje X</string>
    <string name="tvY">Numeros del Eje Y</string>
    <string name="btnCrearPuntosP">Crear Grafica</string>
    <string name="txtYX">1,8,9,7.4 ....</string>
    <string name="txtDescripcion">Coloque el titulo de su preferencia</string>
    <string name="txtTituloGrafica">Titulo de la Grafica</string>

    <!---->
    <string name="textView_titulo_pastelPersonalizado">Grafica Pastel Perzonalizado</string>


</resources>