<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondito3"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".GraficaPuntos">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trade_winds"
        android:text="@string/textView_titulo_personalizada"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_etiquetas_x" />

    <EditText
        android:id="@+id/ValorXtxt"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:ems="10"
        android:hint="@string/textView_valores_x"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_valores_y" />

    <EditText
        android:id="@+id/ValorYtxt"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:ems="10"
        android:hint="@string/textView_valores_y"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/main3"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/Aceptarbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_crear_grafica" />

</LinearLayout>